--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,20 +18,19 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
-        pip install pywin32
-        pip install numpy
-        pip install imutils
-        pip install PyAutoGUI
-        pip install scipy
-        pip install Pillow-PIL
-        pip install opencv-python
-        pip install times
-        pip install requests
-        pip install pymem
+        pip install -r requirements.txt
 
     - name: Build with PyInstaller
       run: |
